trying to fix swagger_output.json
